--- a/examples/rpc/CMakeLists.txt
+++ b/examples/rpc/CMakeLists.txt
@@ -7,7 +7,8 @@ find_package (Threads REQUIRED)
 make_sample (rpc-server rpc-server "rpc_server.c;util.c;segment.c")
 set_sisci (rpc-server)
 
-make_sample (rpc-client rpc-identify "rpc_client.c;util.c;segment.c") 
-set_sisci (rpc-client)
+make_sample (rpc-identify rpc-identify "rpc_client.c;util.c;segment.c") 
+set_sisci (rpc-identify)
 
-add_custom_target(rpc DEPENDS rpc-server rpc-client)
+add_custom_target(rpc DEPENDS rpc-server rpc-identify)
+add_custom_target(rpc-client DEPENDS rpc-identify)
