Fixed compilation for non-SmartIO version of benchmarks

--- a/benchmarks/cuda/CMakeLists.txt
+++ b/benchmarks/cuda/CMakeLists.txt
@@ -6,5 +6,8 @@ find_package (Threads REQUIRED)
 
 find_package (CUDA 8.0 REQUIRED)
 
-make_sisci_benchmark (cuda-benchmark cuda-bench "main.cu;buffer.cu;ctrl.cc;settings.cu;queue.cu")
+make_sisci_benchmark (cuda-benchmark-smartio cuda-bench "main.cu;buffer.cu;ctrl.cc;settings.cu;queue.cu")
 
+make_benchmark (cuda-benchmark-module cuda-bench "main.cu;buffer.cu;ctrl.cc;settings.cu;queue.cu")
+
+make_benchmark_choice (cuda-benchmark cuda-benchmark-smartio cuda-benchmark-module)
