--- a/examples/rpc/CMakeLists.txt
+++ b/examples/rpc/CMakeLists.txt
@@ -7,8 +7,11 @@ find_package (Threads REQUIRED)
 make_sample (rpc-server rpc-server "rpc_server.c;util.c;segment.c")
 set_sisci (rpc-server)
 
-make_sample (rpc-identify rpc-identify "rpc_client.c;util.c;segment.c") 
+make_sample (rpc-identify rpc-identify "rpc_identify.c;util.c;segment.c") 
 set_sisci (rpc-identify)
 
-add_custom_target(rpc DEPENDS rpc-server rpc-identify)
-add_custom_target(rpc-client DEPENDS rpc-identify)
+make_sample (rpc-dd rpc-dd "rpc_dd.c;util.c;segment.c")
+set_sisci (rpc-dd)
+
+add_custom_target(rpc DEPENDS rpc-server rpc-identify rpc-dd)
+add_custom_target(rpc-clients DEPENDS rpc-identify rpc-dd)
