benchmarks: Submission queues on GPU (smartio)
Latency benchmark now (fully) supports hosting submission queues in GPU
memory for SmartIO.

--- a/benchmarks/latency/CMakeLists.txt
+++ b/benchmarks/latency/CMakeLists.txt
@@ -6,7 +6,7 @@ find_package (Threads REQUIRED)
 
 find_package (CUDA 8.0 REQUIRED)
 
-make_sisci_benchmark (latency-benchmark-smartio latency-bench "main.cu;settings.cu;buffer.cu;ctrl.cc;queue.cc;barrier.cc;transfer.cc")
+make_sisci_benchmark (latency-benchmark-smartio latency-bench "main.cu;settings.cu;buffer.cu;ctrl.cc;queue.cc;barrier.cc;transfer.cc;map.cc")
 
 make_benchmark (latency-benchmark-module latency-bench "main.cu;settings.cu;buffer.cu;ctrl.cc;queue.cc;barrier.cc;transfer.cc")
 
